src/scss/4-statusbar.scss
/* ---------------------------------- Order --------------------------------- */
// Right items
[id='vscodevim.vim.primary'] {
  order: 1;
}
[id='alefragnani.project-manager.projectManager.statusBar'] {
  order: 2;
}
[id='status.scm.0'] {
  order: 3;
}
[id='status.scm.1'] {
  order: 4;
}
[id='status.problems'] {
  order: 5;
}

// Left items
[id='vscodevim.vim.showcmd'] {
  order: -1;
}

/* --------------------------------- Spacing -------------------------------- */
[id='#{$statusbar-id}'] {
  background-color: $status-bar-background;
  > .left-items.items-container > div,
  > .right-items.items-container > div {
    // > .left-items.items-container > div > .statusbar-item-label,
    // > .right-items.items-container > div > .statusbar-item-label {
    height: $status-bar-item-height;
    margin: 3px 0 0;
    padding: 0;
  }
  > .left-items.items-container > div > .statusbar-item-label,
  > .right-items.items-container > div > .statusbar-item-label {
    margin: 0;
    padding: 0px 5px;
    border-radius: $border-radius-md;
  }

  > .left-items.items-container {
    > [id='vscodevim.vim.primary'] {
      margin-left: $screen-edge-gutter;
    }
    gap: $status-bar-item-gap;
  }

  > .right-items.items-container {
    > [id='vscodevim.vim.showcmd']:not(
        :has(> .statusbar-item-label[style*='display: none'])
      ) {
      margin-right: $screen-edge-gutter;
    }
    gap: $status-bar-item-gap;
  }

  [id='status.notifications']:has(
      ~ [id='vscodevim.vim.showcmd']
        > .statusbar-item-label[style*='display: none']
    ) {
    margin-right: calc(0px - $status-bar-item-gap);
  }
}

/* -------------------------------- VIM items ------------------------------- */
div[id='vscodevim.vim.primary'],
div[id='vscodevim.vim.showcmd'] {
  display: flex;
  align-items: center;

  > .statusbar-item-label:not(#\9) {
    margin: 0;
    padding: 0;
    min-width: 0px;
    transition: min-width $general-trans-duration;
    border-radius: $border-radius-md;

    &[style*='display: none'] {
      width: 0px;
      display: block;
    }

    &:not([style*='display: none']):not(#\9):not(#\9),
    &[aria-label*='|']:not(#\9):not(#\9) {
      // margin-bottom: 2px;
      height: $vim-input-height;
      box-sizing: border-box;
    }
  }
}

div[id='vscodevim.vim.primary'] {
  > .statusbar-item-label {
    color: $vim-status;

    &[aria-label*='|']:not(#\9):not(#\9) {
      min-width: $vim-status-input-width;
      outline: 2px solid $vim-status;
      padding: 2px 3px 2px;
    }
  }
}

div[id='vscodevim.vim.showcmd'] {
  > .statusbar-item-label {
    color: $vim-pending-keys;

    &:not([style*='display: none']):not(#\9):not(#\9) {
      min-width: $vim-pending-keys-input-width;
      outline: 2px solid $vim-pending-keys;
      padding: 2px 2px 5px;
    }
  }
}

